Bug 237343. Adjust inline frame PerFrameData mCombinedArea to account for width increase due to justification.